[gd_scene load_steps=18 format=3 uid="uid://c7yfw58ilh1y4"]

[ext_resource type="PackedScene" uid="uid://mdsqpmcb7k53" path="res://scenes/progress_bar.tscn" id="1_man6q"]
[ext_resource type="PackedScene" uid="uid://c0vow3q82yehc" path="res://scenes/weapon_hud.tscn" id="2_o1c2v"]
[ext_resource type="Script" path="res://deprecated/inventory/inventory_interface.gd" id="3_ua55n"]
[ext_resource type="PackedScene" uid="uid://cq5gdhexp333" path="res://deprecated/inventory/craft_menu_scenes/craft_menu.tscn" id="4_4vtvh"]
[ext_resource type="PackedScene" uid="uid://pp77ah6u2djb" path="res://deprecated/inventory/inventory_scenes/main_inventory.tscn" id="5_vyu2e"]
[ext_resource type="Script" path="res://deprecated/inventory/item/inv_item_info_panel.gd" id="6_jv386"]
[ext_resource type="PackedScene" uid="uid://drejmah8lp647" path="res://deprecated/inventory/inventory_scenes/inventory_slot.tscn" id="7_xo8b1"]
[ext_resource type="Script" path="res://scripts/interface/divide_content.gd" id="8_nwxhf"]
[ext_resource type="Script" path="res://scripts/interface/slot.gd" id="9_1pj6f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3tcom"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.796078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfy83"]
bg_color = Color(0, 0.611765, 0.286275, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing_size = 0.979

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27v0r"]
bg_color = Color(0.435294, 0.435294, 0.435294, 0.490196)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xqr46"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hi0ux"]
bg_color = Color(0.231373, 0.231373, 0.231373, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4e25u"]
bg_color = Color(1, 1, 1, 0)
border_width_top = 5
border_color = Color(0.490196, 0.0980392, 0.592157, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnoc3"]
bg_color = Color(1, 1, 1, 0)
border_width_top = 5
border_color = Color(0.117647, 0.243137, 0.494118, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yrev"]
bg_color = Color(1, 1, 1, 0)
border_width_top = 5
border_color = Color(0.113725, 0.372549, 0.494118, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -90.0
offset_right = 250.0
grow_vertical = 0
theme_override_constants/margin_left = 35
theme_override_constants/margin_bottom = 35

[node name="PlayerStats" parent="MarginContainer" instance=ExtResource("1_man6q")]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 90)
layout_mode = 2
size_flags_stretch_ratio = 5.0

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -137.0
offset_top = -77.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 35

[node name="WeaponHud" parent="MarginContainer3" instance=ExtResource("2_o1c2v")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 10
size_flags_stretch_ratio = 5.0

[node name="InventoryInterface" type="Control" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0
mouse_filter = 1
script = ExtResource("3_ua55n")
player = NodePath("")

[node name="CraftMenuMargin" type="MarginContainer" parent="InventoryInterface"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -542.5
offset_top = -400.0
offset_right = 542.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 765
theme_override_constants/margin_bottom = 120

[node name="CraftMenu" parent="InventoryInterface/CraftMenuMargin" node_paths=PackedStringArray("player") instance=ExtResource("4_4vtvh")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(350, 460)
layout_mode = 2
player = NodePath("")

[node name="MarginContainer3" type="MarginContainer" parent="InventoryInterface"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 799
theme_override_constants/margin_bottom = 120

[node name="ExternalInventory" parent="InventoryInterface/MarginContainer3" instance=ExtResource("5_vyu2e")]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.509804)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 5.0

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -136.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="InvItemInfoPanel" type="PanelContainer" parent="InventoryInterface/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(380, 200)
layout_mode = 2
size_flags_vertical = 0
focus_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_3tcom")
script = ExtResource("6_jv386")

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Rarity" type="Label" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "unpopular"
uppercase = true

[node name="MainContent" type="HBoxContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="ItemHealth" type="ProgressBar" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
theme_override_styles/fill = SubResource("StyleBoxFlat_sfy83")
value = 80.0
show_percentage = false

[node name="Label" type="Label" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ItemHealth"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "QUALITY
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="ItemIcon" type="TextureRect" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/PanelContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0
expand_mode = 1
stretch_mode = 5

[node name="AmmoCountPanel" type="PanelContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/ItemIcon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="AmmoCount" type="Label" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/ItemIcon/AmmoCountPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 18
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponSlots" type="PanelContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/WeaponSlots"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/WeaponSlots/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 7
text = "Attachments"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/WeaponSlots/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Slot" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/WeaponSlots/VBoxContainer/HBoxContainer" instance=ExtResource("7_xo8b1")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_27v0r")

[node name="Slot2" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/WeaponSlots/VBoxContainer/HBoxContainer" instance=ExtResource("7_xo8b1")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_27v0r")

[node name="Slot3" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/WeaponSlots/VBoxContainer/HBoxContainer" instance=ExtResource("7_xo8b1")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_27v0r")

[node name="Slot4" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/PanelContainer/MarginContainer/VBoxContainer/WeaponSlots/VBoxContainer/HBoxContainer" instance=ExtResource("7_xo8b1")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_27v0r")

[node name="TabContainer" type="TabContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 15.0
focus_mode = 1
theme_override_constants/outline_size = 0
theme_override_constants/side_margin = 0
theme_override_constants/icon_max_width = 0
theme_override_font_sizes/font_size = 16
current_tab = 0

[node name="Details" type="TabBar" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer"]
layout_mode = 2
focus_mode = 0
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Details"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemName" type="Label" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Details/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 14
text = "Assault Rifle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Details/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Details/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Details/VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ItemDescription" type="RichTextLabel" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Details/VBoxContainer/MarginContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/normal_font_size = 10
text = "The handy short automatic rifle with supressor and sight.

Ammo type: 5.45 mm
Damage head: 60 hp
Damage body: 25 hp
Damage arms: 15 hp
Damage legs: 15 hps
Shoot types: auto, single, burst"

[node name="Actions" type="TabBar" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer"]
visible = false
layout_mode = 2
focus_mode = 0
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Actions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Actions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Actions/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ItemUseButton" type="Button" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Actions/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_xqr46")
theme_override_styles/normal = SubResource("StyleBoxFlat_hi0ux")
text = "Use
"

[node name="WeaponUnloadButton" type="Button" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Actions/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_xqr46")
theme_override_styles/normal = SubResource("StyleBoxFlat_hi0ux")
text = "Unload"

[node name="ItemDropButton" type="Button" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Actions/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_xqr46")
theme_override_styles/normal = SubResource("StyleBoxFlat_hi0ux")
text = "Drop"

[node name="DivideContent" type="HBoxContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("8_nwxhf")

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/DivideContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/DivideContent/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DivideNumber" type="Label" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/DivideContent/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "350"
horizontal_alignment = 1

[node name="DivideScroll" type="HScrollBar" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/DivideContent/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
rounded = true

[node name="DivideButton" type="Button" parent="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/DivideContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Divide"

[node name="PlayerInventory" parent="InventoryInterface/MarginContainer/VBoxContainer" node_paths=PackedStringArray("player") instance=ExtResource("5_vyu2e")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.509804)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 10.0
player = NodePath("")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -55.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 5.0
mouse_filter = 2
theme_override_constants/margin_bottom = 35

[node name="PlayerQuickSlot" parent="MarginContainer2" node_paths=PackedStringArray("player") instance=ExtResource("5_vyu2e")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 20.25
player = NodePath("")

[node name="GrabbedSlot" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.788235)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(58, 58)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("9_1pj6f")

[node name="TopRarity" type="PanelContainer" parent="GrabbedSlot"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4e25u")

[node name="RareRarity" type="PanelContainer" parent="GrabbedSlot"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jnoc3")

[node name="UnpopularRarity" type="PanelContainer" parent="GrabbedSlot"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4yrev")

[node name="MarginContainer3" type="MarginContainer" parent="GrabbedSlot"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TextureRect" type="TextureRect" parent="GrabbedSlot/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Amount" type="Label" parent="GrabbedSlot/MarginContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "x99"

[node name="MarginContainer2" type="MarginContainer" parent="GrabbedSlot"]
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5

[node name="SlotNumber" type="Label" parent="GrabbedSlot/MarginContainer2"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "1"

[connection signal="gui_input" from="InventoryInterface" to="InventoryInterface" method="_on_gui_input"]
[connection signal="signal_item_info_panel_set_data" from="InventoryInterface" to="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel" method="_on_inventory_interface_signal_item_info_panel_set_data"]
[connection signal="visibility_changed" from="InventoryInterface" to="InventoryInterface" method="_on_visibility_changed"]
[connection signal="pressed" from="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Actions/VBoxContainer/MarginContainer/VBoxContainer/ItemUseButton" to="InventoryInterface" method="_on_item_use_button_pressed"]
[connection signal="pressed" from="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/MainContent/TabContainer/Actions/VBoxContainer/MarginContainer/VBoxContainer/ItemDropButton" to="InventoryInterface" method="_on_item_drop_button_pressed"]
[connection signal="signal_divide_button_pressed" from="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/DivideContent" to="InventoryInterface" method="_on_divide_content_signal_divide_button_pressed"]
[connection signal="scrolling" from="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/DivideContent/VBoxContainer/DivideScroll" to="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/DivideContent" method="_on_divide_scroll_scrolling"]
[connection signal="pressed" from="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/DivideContent/DivideButton" to="InventoryInterface/MarginContainer/VBoxContainer/InvItemInfoPanel/MarginContainer/VBoxContainer/DivideContent" method="_on_divide_button_pressed"]
[connection signal="gui_input" from="GrabbedSlot" to="GrabbedSlot" method="_on_gui_input"]
[connection signal="mouse_entered" from="GrabbedSlot" to="GrabbedSlot" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="GrabbedSlot" to="GrabbedSlot" method="_on_mouse_exited"]
